# tg_bot_api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml  test_and_build.yaml
alembic/: env.py
src/: config.py  constants.py  crud.py  crud_base.py  exceptions.py  main.py  utils.py
src/subscription/: constants.py  crud.py  database.py  dependencies.py  router.py  schemas.py
src/user_chat/: constants.py  crud.py  database.py  dependencies.py  router.py  schemas.py
src/user_data/: constants.py  crud.py  database.py  dependencies.py  exceptions.py  router.py  schemas.py
src/user_search_settings/: constants.py  crud.py  database.py  dependencies.py  router.py  schemas.py
src/user_word/: constants.py  crud.py  database.py  dependencies.py  router.py  schemas.py
tests/: conftest.py
tests/base/: test_crud_base.py
tests/subscription/: test_crud.py  test_router.py
tests/user_chat/: test_crud.py  test_router.py
tests/user_data/: test_crud.py  test_crud_user_data.py  test_router.py
tests/user_search_settings/: test_crud.py  test_router.py
tests/user_word/: test_crud.py  test_router.py
